src/test/ui/type-alias-impl-trait/generic_type_does_not_live_long_enough.nll.stderr
error: at least one trait must be specified
  --> $DIR/generic_type_does_not_live_long_enough.rs:9:35
   |
LL | existential type WrongGeneric<T>: 'static;
   |                                   ^^^^^^^

error[E0308]: mismatched types
  --> $DIR/generic_type_does_not_live_long_enough.rs:6:18
   |
LL |     let z: i32 = x;
   |                  ^ expected i32, found opaque type
   |
   = note: expected type `i32`
              found type `WrongGeneric::<&{integer}>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
